# pkg-obsidian

./: CODEOWNERS  README.md  pyproject.toml
examples/: di_extraction.py  email_processing.py  forensics_analyzer.py  text_anonymization.py  text_extraction.py
examples/medical_provider_ranking/: api_example.py  json_example.py  sample_providers.json  simple_example.py
examples/results/: di_extraction_result.json  forensic_analzyer_result.json
examples/sample_documents/: email.msg  sample_text.txt
examples/schema_generation/: README.md  pydantic_to_schema.py  results.json  results.py  sample_models.py  sample_schema.json  schema_to_pydantic.py
src/da3_obsidian/: __init__.py  activities.py
src/da3_obsidian/di_text_extraction/: README.md  __init__.py  engines.py  extractor.py  models.py
src/da3_obsidian/email_preprocessing/: README.md  __init__.py  attachment_handler.py  data_models.py  msg_processor.py  preprocessor.py
src/da3_obsidian/forensic_analysis/: README.md  __init__.py  analyzer.py  config.py  core.py  image_analyzer.py  metadata_analyzer.py  models.py  pdf_analyzer.py
src/da3_obsidian/medical_provider_ranking/: README.md  __init__.py  models.py  ranker.py  similarity.py  utils.py
src/da3_obsidian/pydantic_schema_codegen/: README.md  __init__.py  core.py  generator.py  io_utils.py  schemas.py  source_generator.py  source_parser.py
src/da3_obsidian/text_anonymization/: README.md  __init__.py  anonymizer.py  engines.py
src/da3_obsidian/text_extraction/: README.md  __init__.py  extractor.py  image_processor.py  pdf_processor.py  quality_checker.py
tests/: test_simple.py
